<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:theme="@style/AppTheme"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin">-->
    <!--&lt;!&ndash; tools:context="com.tony_justin.mobile_app.LoginActivity"&ndash;&gt;-->



    <!--&lt;!&ndash; Login progress &ndash;&gt;-->

    <!--<ProgressBar-->
        <!--android:id="@+id/login_progress"-->
        <!--android:background="@color/colorGreyLight"-->
        <!--style="?android:attr/progressBarStyleLarge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:visibility="gone" />-->

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/email_login_form"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:weightSum="1">-->

            <!--<ImageView-->
                <!--android:src="@mipmap/ic_launcher"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="175dp"-->
                <!--android:layout_marginBottom="20dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_weight="1.35" />-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<AutoCompleteTextView-->
                    <!--android:id="@+id/email"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_email"-->
                    <!--android:inputType="textEmailAddress"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/password"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_password"-->
                    <!--android:imeActionId="@+id/login"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<Button-->
                <!--android:id="@+id/email_sign_in_button"-->
                <!--android:background="@drawable/rounded_button"-->
                <!--style="?android:textAppearanceSmall"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_marginTop="50dp"-->
                <!--android:text="@string/action_sign_in_short"-->
                <!--android:textStyle="bold"-->
                <!--android:textColor="@color/colorWhite"/>-->

            <!--<TextView android:id="@+id/email_register_button_login"-->
                <!--style="?android:textAppearanceSmall"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="65dp"-->
                <!--android:text="No account yet? Create one"-->
                <!--android:gravity="center"-->
                <!--android:layout_marginTop="12dp" />-->

            <!--<ImageView-->
                <!--android:id="@+id/fingerprint_icon"-->
                <!--android:src="@drawable/ic_fingerprint_black_24dp"-->
                <!--android:layout_gravity="right"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp" />-->

        <!--</LinearLayout>-->
    <!--</ScrollView>-->


<!--</LinearLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/grey_100"
android:orientation="vertical"
android:weightSum="4">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        style="@style/ThemeOverlay.FirebaseIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_firebase_lockup"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:text="@string/emailpassword_title_text"
        android:theme="@style/ThemeOverlay.MyTitleText" />

    <TextView
        android:id="@+id/status"
        style="@style/ThemeOverlay.MyTextDetail"
        android:text="@string/signed_out" />

</LinearLayout>


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@color/grey_300"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/email_password_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_password_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_password_fields"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/email_create_account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signed_in_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:weightSum="2.0">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/verify_email_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/verify_email"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <ImageView
            android:id="@+id/fingerprint_icon"
            android:src="@drawable/ic_fingerprint_black_24dp"
            android:layout_gravity="right"
            android:layout_width="50dp"
            android:layout_height="50dp" />

    </LinearLayout>

</RelativeLayout>



</LinearLayout>
